css fix for navbar on smaller media

--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -3330,7 +3330,7 @@ input, select, textarea {
 				/*display: none*/ ;
 				overflow: auto;
 				white-space: nowrap;
-				max-width: calc(100% - 0em);
+				/*max-width: calc(100% - 0em);*/
 			}
 
 
